# DeviceManager

./: build.gradle  iKnow.jks  settings.gradle
app/: build.gradle  proguard-rules.pro
app/schemas/com.iknowmuch.devicemanager.db.CabinetDoorDataBase/: 1.json  2.json
app/src/androidTest/java/com/iknowmuch/devicemanager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: database-v1.db  database.db  v1.db
app/src/main/java/com/iknowmuch/devicemanager/: BootReceiver.kt  Config.kt  MainActivity.kt
app/src/main/java/com/iknowmuch/devicemanager/base/: App.kt  BaseRemoteRepository.kt
app/src/main/java/com/iknowmuch/devicemanager/bean/: BaseJson.kt  CabinetDataJson.kt  CabinetDoor.kt  ControllerResult.kt  DefaultResponseJson.kt  Device.kt  HomeData.kt  MQMessage.kt  QRCodeJson.kt  ReturnProbeResult.kt  WXAccessToken.kt
app/src/main/java/com/iknowmuch/devicemanager/db/: CabinetDoorDataBase.kt
app/src/main/java/com/iknowmuch/devicemanager/di/: AppModule.kt  (+2 more)
app/src/main/res/drawable/: ic_battery_border.xml  ic_circle_right_arrow.xml  ic_close.xml  ic_error.xml  ic_fialed.xml  ic_help.xml  ic_launcher_foreground.xml  ic_launcher_svg.xml  ic_location.xml  ic_offline.xml  ic_power_full.xml  ic_success.xml  scan_board.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/com/iknowmuch/devicemanager/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
serialport/: CMakeLists.txt  build.gradle
serialport/src/main/: AndroidManifest.xml
(+52 files in other folders)
